--- a/src/app/side-navigation/side-navigation.component.html
+++ b/src/app/side-navigation/side-navigation.component.html
@@ -25,7 +25,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>MyCanteen<mat-icon aria-hidden="false" aria-label="Home" color="primary"> restaurant</mat-icon></span>
+      <span>MyCanteen<mat-icon aria-hidden="false" aria-label="Home" > restaurant</mat-icon></span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
