--- a/src/app/burger-dashboard/burger-dashboard.component.html
+++ b/src/app/burger-dashboard/burger-dashboard.component.html
@@ -16,7 +16,11 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <div>Card Content Here</div>
+         
+
+          <img src={{card.image}} alt="" style="width:300px; height:150px; ">
+          <div>{{card.description}}</div>
+          <button mat-raised-button color="warn">Add</button>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
